--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+## Nome dell'applicazione
 spring.application.name=ticket-platform
+
+# Configurazione del database MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/ticket_platform?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root           
+spring.datasource.password=Tigre_679510
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+## Hybernate Properties
+# Dialetto Hibernate per MySQL
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+
+# Hibernate ddl auto (create, create-drop, validate, update, none)
+# Per la PRIMA VOLTA: Creiamo le tabelle e cancelliamo il database ad ogni riavvio con create
+spring.jpa.hibernate.ddl-auto = update
+
+# Mostra tutte le query SQL eseguite da Hibernate nella console.
+spring.jpa.show-sql=true   
+
+# Format di lettura delle query SQL
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configurazione del formato di data/ora per Thymeleaf e Spring MVC
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
