--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,17 @@
 spring.application.name=ticket-platform
 
 # Configurazione del database MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/ticket_platform?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root           
+spring.datasource.url=jdbc:mysql://localhost:3306/ticket_platform
+spring.datasource.username=root
 spring.datasource.password=Tigre_679510
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Hybernate Properties
 # Dialetto Hibernate per MySQL
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+# Abilita l'esecuzione di data.sql per caricare dati iniziali nel database all'inizio con always
+spring.sql.init.mode=never
 
 # Hibernate ddl auto (create, create-drop, validate, update, none)
 # Per la PRIMA VOLTA: Creiamo le tabelle e cancelliamo il database ad ogni riavvio con create
