feat: Added security, login, home, and logout: - Implemented Spring Security. - Added BCrypt password encryption. - Created login page with error handling. - Added personalized home page. - Implemented logout with success message.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
+
+# Abilitare il supporto per WebJars
+spring.web.resources.add-mappings=true
