feat: Implemented all core features including authentication, role-based authorization, ticket CRUD, category filtering, dashboard views, operator management, and profile image handling. Final polish and bug fixes applied.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,11 @@ spring.mvc.format.time=HH:mm:ss
 
 # Abilitare il supporto per WebJars
 spring.web.resources.add-mappings=true
+
+# configurazione di Thymeleaf includa la registrazione del dialetto di Spring Security
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
